# nexight-backend

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  docker-compose.sh  rebuild.sh  setup.sh
.cargo/: config.toml
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  rebuild.sh
examples/: auth_demo.rs
migrations/2025-10-04-185427-0000_create_users/: up.sql
migrations/2025-10-04-222803-0000_create_article_categories/: down.sql  up.sql
migrations/2025-10-07-235920-0000_create_articles/: down.sql  up.sql
src/: main.rs
src/application/: mod.rs
src/application/services/: auth_service.rs  mod.rs
src/application/use_cases/: create_article.rs  delete_article.rs  get_article.rs  list_article_categories.rs  list_articles.rs  login_user.rs  mod.rs  register_user.rs  update_article.rs
src/domain/entities/: article.rs  article_category.rs  mod.rs  user.rs
src/domain/repositories/: article_category_repository.rs  article_repository.rs  mod.rs  user_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs  schema.rs
src/infrastructure/middleware/: auth_middleware.rs
src/interfaces/: mod.rs
tests/: lib.rs
tests/common/: mod.rs
tests/integration/: list_article_categories_tests.rs  login_user_tests.rs  mod.rs  register_user_tests.rs
tests/unit/: article_category_entity_tests.rs  article_category_repository_tests.rs  article_category_use_case_tests.rs  article_entity_tests.rs  article_repository_tests.rs  auth_service_tests.rs  mod.rs  user_entity_tests.rs
(+18 files in other folders)
