[package]
name = "nexight-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2"
tokio = { version = "1", features = ["full"] }
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
r2d2 = "0.8"
anyhow = "1"
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"